saltstack/salt/roles/load_balancer/files/iptables.save
# Generated by iptables-save v1.4.21 on Fri May 18 11:03:16 2018
*filter
:INPUT ACCEPT [4201183:999408407]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4194981:1007617297]
-A FORWARD -i ens192 -o ens192 -j ACCEPT
-A FORWARD -i ens192 -o ens192 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri May 18 11:03:16 2018
# Generated by iptables-save v1.4.21 on Fri May 18 11:03:16 2018
*nat
:PREROUTING ACCEPT [562:49871]
:INPUT ACCEPT [493:38517]
:OUTPUT ACCEPT [1570846:326317762]
:POSTROUTING ACCEPT [1570915:326329116]
COMMIT
# Completed on Fri May 18 11:03:16 2018
# Generated by iptables-save v1.4.21 on Fri May 18 11:03:16 2018
*mangle
:PREROUTING ACCEPT [4268191:1113092234]
:INPUT ACCEPT [4201182:999408186]
:FORWARD ACCEPT [67009:113684048]
:OUTPUT ACCEPT [4194980:1007617076]
:POSTROUTING ACCEPT [4261989:1121301124]
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1560 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1561 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1562 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1563 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1564 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1514 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p tcp -m tcp --sport 1522 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p udp -m udp --sport 1516 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p udp -m udp --sport 1518 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p udp -m udp --sport 1519 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p udp -m udp --sport 1530 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -s 192.168.10.0/24 -p udp -m udp --sport 514 -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Fri May 18 11:03:16 2018
